test/parse/bad-argument-ref.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-gc
;;; ERROR: 1
(module
  (func
    unreachable
    ref.as_non_null
    ref.as_non_null
    i32.const 5
    i32.add
    drop
  )
)
(;; STDERR ;;;
out/test/parse/bad-argument-ref.txt:10:5: error: type mismatch in i32.add, expected [i32, i32] but got [(ref something), i32]
    i32.add
    ^^^^^^^
;;; STDERR ;;)
